--- a/aws_products_config.yaml
+++ b/aws_products_config.yaml
@@ -1,98 +1,81 @@
 products:
   wofs_filtered_summary:
-    prefix: WOfS/filtered_summary/v2.1.0/combined/x_{x}/y_{y}/wofs_filtered_summary_{x}_{y}
-    product_suite: WOfS
-    description: 'Water Observations from Space Statistics confidence filtered.'
+    prefix: WOfS/filtered_summary/v2.1.0/combined
+    name_template: x_{x}/y_{y}/wofs_filtered_summary_{x}_{y}
 
   wofs_albers:
-    prefix: WOfS/WOFLs/v2.1.5/combined/x_{x}/y_{y}/LS_WATER_3577_{x}_{y}_{time:%Y-%m-%d}
-    product_suite: WOfS
-    description: 'Historic Flood Mapping Water Observations from Space'
+    prefix: WOfS/WOFLs/v2.1.5/combined
+    name_template: x_{x}/y_{y}/LS_WATER_3577_{x}_{y}_{time:%Y-%m-%d}
 
   wofs_statistical_summary:
-    prefix: WOfS/summary/v2.1.0/combined/x_{x}/y_{y}/WOFS_3577_{x}_{y}_summary
-    product_suite: WOfS
-    description: 'Water Observations from Space Statistics'
+    prefix: WOfS/summary/v2.1.0/combined
+    name_template: x_{x}/y_{y}/WOFS_3577_{x}_{y}_summary
 
   wofs_annual_summary:
-    prefix: WOfS/annual_summary/v2.1.5/combined/x_{x}/y_{y}/WOFS_3577_{x}_{y}_{time:%Y}_summary
-    product_suite: WOfS
-    description: 'Water Observations from Space Annual Statistics'
+    prefix: WOfS/annual_summary/v2.1.5/combined
+    name_template: x_{x}/y_{y}/WOFS_3577_{x}_{y}_{time:%Y}_summary
 
   ls5_fc_albers:
-    prefix: fractional-cover/fc/v2.2.0/ls5/x_{x}/y_{y}/LS5_TM_FC_3577_{x}_{y}_{time:%Y-%m-%d}
-    product_suite: fractional-cover
-    description: 'Landsat 5 Fractional Cover 25 metre, 100km tile, Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: fractional-cover/fc/v2.2.0/ls5
+    name_template: x_{x}/y_{y}/LS5_TM_FC_3577_{x}_{y}_{time:%Y-%m-%d}
 
   ls7_fc_albers:
-    prefix: fractional-cover/fc/v2.2.0/ls7/x_{x}/y_{y}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y-%m-%d}
-    product_suite: fractional-cover
-    description: 'Landsat 7 Fractional Cover 25 metre, 100km tile, Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: fractional-cover/fc/v2.2.0/ls7
+    name_template: x_{x}/y_{y}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y-%m-%d}
 
   ls8_fc_albers:
-    prefix: fractional-cover/fc/v2.2.0/ls8/x_{x}/y_{y}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y-%m-%d}
-    product_suite: fractional-cover
-    description: 'Landsat 8 Fractional Cover 25 metre, 100km tile, Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: fractional-cover/fc/v2.2.0/ls8
+    name_template: x_{x}/y_{y}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y-%m-%d}
 
   fc_percentile_annual:
-    prefix: fractional-cover/fc-percentile/annual/v2.1.0/combined/x_{x}/y_{y}/LS_FC_PC_3577_{x}_{y}_{time:%Y}
-    product_suite: fractional-cover
-    description: 'Landsat Fractional Cover percentile 25 metre, 100km tile, Australian Albers Equal Area projection
-    (EPSG:3577)'
+    prefix: fractional-cover/fc-percentile/annual/v2.1.0/combined
+    name_template: x_{x}/y_{y}/LS_FC_PC_3577_{x}_{y}_{time:%Y}
 
   fc_percentile_seasonal:
-    prefix: fractional-cover/fc-percentile/seasonal/v2.1.0/combined/x_{x}/y_{y}
-    product_suite: fractional-cover
-    description: 'Landsat Fractional Cover percentile 25 metre, 100km tile, Australian Albers Equal Area projection
-    (EPSG:3577)'
+    prefix: fractional-cover/fc-percentile/seasonal/v2.1.0/combined
+    name_template: x_{x}/y_{y}/LS_FC_PC_3577_{x}_{y}_{epoch_start:%Y%m%d}_{epoch_end:%Y%m%d}'
 
   ls8_barest_earth_mosaic:
-    prefix: bare-earth/summary/v2.1.1/L8/x_{x}/y_{y}
-    description: 'Landsat-8 Barest Earth pixel composite mosaic 25 metre, 25km tile,
-    Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: bare-earth/summary/v2.1.1/L8
+    name_template: x_{x}/y_{y}
 
   ls5_nbart_geomedian_annual:
-    prefix: geomedian-australia/v2.1.0/L5/x_{x}/y_{y}
-    product_suite: geomedian-australia
-    description: 'Landsat-5 Surface Reflectance Geometric Median 25 metre, 100km tile,
-    Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: geomedian-australia/v2.1.0/L5
+    name_template: x_{x}/y_{y}
 
   ls7_nbart_geomedian_annual:
-    prefix: geomedian-australia/v2.1.0/L7/x_{x}/y_{y}
-    product_suite: geomedian-australia
-    description: 'Landsat-7 Surface Reflectance Geometric Median 25 metre, 100km tile,
-    Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: geomedian-australia/v2.1.0/L7
+    name_template: x_{x}/y_{y}
 
   ls8_nbart_geomedian_annual:
-    prefix: geomedian-australia/v2.1.0/L8/x_{x}/y_{y}
-    product_suite: geomedian-australia
-    description: 'Landsat-8 Surface Reflectance Geometric Median 25 metre, 100km tile,
-    Australian Albers Equal Area projection (EPSG:3577)'
+    prefix: geomedian-australia/v2.1.0/L8
+    name_template: x_{x}/y_{y}
 
   item_v2:
-    prefix: item_v2/v2.0.1/relative/lon_{lon}/lat_{lat}
-    description: 'Intertidal Extents Model'
+    prefix: item_v2/v2.0.1/relative
+    name_template: lon_{lon}/lat_{lat}
 
   item_v2_conf:
-    prefix: item_v2/v2.0.1/confidence/lon_{lon}/lat_{lat}
-    description: 'Average ndwi Standard Deviation'
+    prefix: item_v2/v2.0.1/confidence
+    name_template: lon_{lon}/lat_{lat}
 
   multi-scale-topographic-position:
-    prefix: multi-scale-topographic-position/v1.0.1/lon_{lon}/lat_{lat}
-    description: 'Multi scale topographic position'
+    prefix: multi-scale-topographic-position/v1.0.1
+    name_template: lon_{lon}/lat_{lat}
 
   nidem:
-    prefix: nidem/v1.0.0/lon_{lon}/lat_{lat}
-    description: 'nidem'
+    prefix: nidem/v1.0.0
+    name_template: lon_{lon}/lat_{lat}
 
   weathering-intensity:
-    prefix: weathering-intensity/v1.0.1/lon_{lon}/lat_{lat}
-    description: 'weathering-intensity'
+    prefix: weathering-intensity/v1.0.1
+    name_template: lon_{lon}/lat_{lat}
 
   mangrove_cover:
-    prefix: mangrove_cover/{x}_{y}
-    description: 'mangrove_cover'
+    prefix: mangrove_cover
+    name_template: {x}_{y}
 
   sentinel-2-nrt:
-    prefix: L2/sentinel-2-nrt/S2MSIARD/{year:4}-{month:2}-{day:2}
-    description: 's2-nbar-nrt'
+    prefix: L2/sentinel-2-nrt/S2MSIARD/
+    name_template: {time:%Y-%m-%d}
+
