--- a/converter/aws_products_config.yaml
+++ b/converter/aws_products_config.yaml
@@ -1,7 +1,7 @@
 products:
   wofs_albers:
     prefix: WOfS/WOFLs/v2.1.5/combined
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS_WATER_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/LS_WATER_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
     predictor: 2
     default_rsp: nearest
 
@@ -25,21 +25,21 @@ products:
 
   ls5_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls5
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS5_TM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/LS5_TM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
     stacked_name_template: LS5_TM_FC_3577_{x}_{y}_{time:%Y}_
     predictor: 2
     default_rsp: average
 
   ls7_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls7
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
     stacked_name_template: LS7_ETM_FC_3577_{x}_{y}_{time:%Y}_
     predictor: 2
     default_rsp: average
 
   ls8_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls8
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
     stacked_name_template: LS8_OLI_FC_3577_{x}_{y}_{time:%Y}_
     predictor: 2
     default_rsp: average
@@ -125,7 +125,73 @@ products:
     default_rsp: average
 
   ls8_nbar_scene:
-    prefix: LANDSAT_SCENE/v1.0.0/ls8_nbar_scene
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/LS8_OLITIRS_NBAR_P54_GANBAR01-032_{x}_{y}_{time:%Y%m%d}
+    prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_NBAR_P54_GANBAR01-032_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls7_nbar_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls7_nbar_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_NBAR_P54_GANBAR01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls5_nbar_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_NBAR_P54_GANBAR01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls8_nbart_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_NBART_P54_GANBART01-032_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls7_nbart_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls7_nbart_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_NBART_P54_GANBART01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls5_nbart_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls5_nbart_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_NBART_P54_GANBART01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls8_pq_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls8_pq_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_PQ_P55_GAPQ01-032_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls7_pq_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls7_pq_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls5_pq_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls5_pq_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls8_pq_legacy_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls8_pq_legacy_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_PQ_P55_GAPQ01-032_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls7_pq_legacy_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls7_pq_legacy_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
+    predictor: 2
+    default_rsp: average
+
+  ls5_pq_legacy_scene:
+    prefix: L2/landsat_scenes/v1.0.0/ls5_pq_legacy_scene
+    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
     predictor: 2
     default_rsp: average
