--- a/converter/aws_products_config.yaml
+++ b/converter/aws_products_config.yaml
@@ -2,193 +2,164 @@ products:
   wofs_albers:
     prefix: WOfS/WOFLs/v2.1.5/combined
     name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS_WATER_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
-    predictor: 2
     default_resampling: nearest
 
   wofs_filtered_summary:
     prefix: WOfS/filtered_summary/v2.1.0/combined
     name_template: x_{x}/y_{y}/wofs_filtered_summary_{x}_{y}
-    predictor: 2
     default_resampling: average
 
   wofs_summary:
     prefix: WOfS/summary/v2.1.0/combined
     name_template: x_{x}/y_{y}/WOFS_3577_{x}_{y}_summary
-    predictor: 2
     default_resampling: average
 
   wofs_annual_summary:
     prefix: WOfS/annual_summary/v2.1.5/combined
     name_template: x_{x}/y_{y}/{time:%Y}/WOFS_3577_{x}_{y}_{time:%Y}_summary
-    predictor: 2
     default_resampling: average
 
   ls5_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls5
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS5_TM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
-    predictor: 2
+    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS5_TM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S}
     default_resampling: average
+    no_overview: ['UE']
 
   ls7_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls7
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
-    predictor: 2
+    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS7_ETM_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S}
     default_resampling: average
+    no_overview: ['UE']
 
   ls8_fc_albers:
     prefix: fractional-cover/fc/v2.2.0/ls8
-    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S%f}
-    predictor: 2
+    name_template: x_{x}/y_{y}/{time:%Y}/{time:%m}/{time:%d}/LS8_OLI_FC_3577_{x}_{y}_{time:%Y%m%d%H%M%S}
     default_resampling: average
+    no_overview: ['UE']
 
   fc_percentile_albers_annual:
     prefix: fractional-cover/fc-percentile/annual/v2.1.0/combined
     name_template: x_{x}/y_{y}/{time:%Y}/LS_FC_PC_3577_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     no_overview: ["source", "observed"]
     default_resampling: average
 
   fc_percentile_seasonal:  # fc_percentile_seasonal product is not found in ODC datacube
     prefix: fractional-cover/fc-percentile/seasonal/v2.1.0/combined
     name_template: x_{x}/y_{y}/LS_FC_PC_3577_{x}_{y}_{start_time:%Y%m%d}_{end_time:%Y%m%d}
-    predictor: 2
     no_overview: ["source", "observed"]
     default_resampling: average
 
   ls8_barest_earth_mosaic:
     prefix: bare-earth/summary/v2.1.1/L8
     name_template: x_{x}/y_{y}/be-l8_{x}_{y}
-    predictor: 2
     default_resampling: average
 
   ls5_nbart_geomedian_annual:
     prefix: geomedian-australia/v2.1.0/L5
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/ls5_gm_nbart_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls7_nbart_geomedian_annual:
     prefix: geomedian-australia/v2.1.0/L7
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/ls7_gm_nbart_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls8_nbart_geomedian_annual:
     prefix: geomedian-australia/v2.1.0/L8
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/ls8_gm_nbart_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   item_v2:
     prefix: item_v2/v2.0.1/relative
     name_template: lon_{lon}/lat_{lat}/ITEM_REL_{lon}_{lat}
-    predictor: 2
     default_resampling: average
 
   item_v2_conf:
     prefix: item_v2/v2.0.1/confidence
     name_template: lon_{lon}/lat_{lat}/ITEM_STD_{lon}_{lat}
-    predictor: 2
     default_resampling: average
 
   multi-scale-topographic-position:
     prefix: multi-scale-topographic-position/v1.0.1
     name_template: lon_{lon}/lat_{lat}/MSTP_{lon}_{lat}
-    predictor: 2
     default_resampling: average
 
   nidem:
     prefix: nidem/v1.0.0
     name_template: lon_{lon}/lat_{lat}/NIDEM_{lon}_{lat}
-    predictor: 2
     default_resampling: average
 
   weathering-intensity:
     prefix: weathering-intensity/v1.0.1
     name_template: lon_{lon}/lat_{lat}/WEATHER_INTENSITY_{lon}_{lat}
-    predictor: 2
     default_resampling: average
 
   mangrove_cover:
     prefix: mangrove_cover
     name_template: "{x}_{y}/MANGROVE_COVER_3577_{x}_{y}_{time:%Y%m%d}"
-    predictor: 2
     default_resampling: average
 
   S1:
     prefix: ga_s1a_c_ard/1-0-0/Copernicus_Backscatter/Sentinel-1/C-SAR/GRD  # dir's in AWS
     name_template: "{time:%Y}/{time:%Y-%m}/{coord}"
-    predictor: 2
     default_resampling: average
 
   ls8_nbar_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_NBAR_P54_GANBAR01-032_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls7_nbar_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls7_nbar_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_NBAR_P54_GANBAR01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls5_nbar_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_NBAR_P54_GANBAR01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls8_nbart_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls8_nbar_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_NBART_P54_GANBART01-032_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls7_nbart_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls7_nbart_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_NBART_P54_GANBART01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls5_nbart_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls5_nbart_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_NBART_P54_GANBART01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls8_pq_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls8_pq_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_PQ_P55_GAPQ01-032_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls7_pq_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls7_pq_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls5_pq_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls5_pq_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls8_pq_legacy_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls8_pq_legacy_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS8_OLITIRS_PQ_P55_GAPQ01-032_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls7_pq_legacy_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls7_pq_legacy_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS7_ETM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
 
   ls5_pq_legacy_scene:
     prefix: L2/landsat_scenes/v1.0.0/ls5_pq_legacy_scene
     name_template: x_{x}/y_{y}/{time:%Y/%m/%d}/product/LS5_TM_PQ_P55_GAPQ01-002_{x}_{y}_{time:%Y%m%d}
-    predictor: 2
     default_resampling: average
