Remove x_ and y_ from name template

--- a/converter/aws_products_config.yaml
+++ b/converter/aws_products_config.yaml
@@ -98,15 +98,15 @@ products:
 
   ga_ls5t_ard_3:
     prefix: ga_landsat_ard_3/ga_ls5t_ard_3/v3.0.0
-    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}
+    name_template: {x}/{y}/{time:%Y/%m/%d}
     default_resampling: average
 
   ga_ls7t_ard_3:
     prefix: ga_landsat_ard_3/ga_ls7t_ard_3/v3.0.0
-    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}
+    name_template: {x}/{y}/{time:%Y/%m/%d}
     default_resampling: average
 
   ga_ls8t_ard_3:
     prefix: ga_landsat_ard_3/ga_ls8t_ard_3/v3.0.0
-    name_template: x_{x}/y_{y}/{time:%Y/%m/%d}
+    name_template: {x}/{y}/{time:%Y/%m/%d}
     default_resampling: average
