--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,22 @@ jobs:
       run: |
         python setup.py bdist_wheel sdist
 
+    - name: Store packages in GitHub
+      uses: actions/upload-artifact@v1
+      with:
+        name: Packages
+        path: dist/
+
+    - name: Install Ubuntu System Packages
+      run: |
+        sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+        sudo apt-get update
+        sudo apt-get install -y gdal libgdal-dev
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install gdal==$(gdal-config --version)
         pip install -r requirements.txt
         pip install dist/*.whl
 
