--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
         sudo apt-get update
-        sudo apt-get install -y gdal libgdal-dev
+        sudo apt-get install -y gdal-bin libgdal-dev
 
     - name: Install dependencies
       run: |
