--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Publish to dea packages repo
       if: |
-        github.ref == 'refs/heads/master'
+        github.ref == 'refs/heads/main'
         && github.event_name == 'push'
 
       run: |
