Try to release using GH Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Publish to dea packages repo
       if: |
-        github.ref == 'refs/heads/main'
+        github.ref == 'refs/heads/main' || startsWith(github.event.ref, 'refs/tags')
 
       run: |
         echo "Using Keys: ...${AWS_ACCESS_KEY_ID:(-4)}/...${AWS_SECRET_ACCESS_KEY:(-4)}"
